DTGB-507: Fixed tag spacing issue.

--- a/components/31-molecules/teasers/teaser-article/_teaser-article.scss
+++ b/components/31-molecules/teasers/teaser-article/_teaser-article.scss
@@ -14,10 +14,6 @@
       order: 2;
     }
 
-    .tag {
-      margin: .8rem 0;
-    }
-
     h3 {
       margin-bottom: 0;
     }
